@@ -1,6 +1,7 @@
 0.6:
   implement ABOR (ncftp was confused after aborting a connection)
   add https support (using OpenSSL)
+  add primitive .htaccess support
 
 0.5:
   CGI-through-proxy support (read README.proxy)
